--- a/app/highvol/www/templates/menu.html
+++ b/app/highvol/www/templates/menu.html
@@ -18,13 +18,13 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/new-workout">
+        <ion-item menu-close href="#/app/new-workout">
           New Workout
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/browse">
           Configure Workouts
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
+        <ion-item nav-clear menu-close href="#/app/logs">
           Logs 
         </ion-item>
         <ion-item nav-clear menu-close ng-click="login()">
@@ -33,8 +33,8 @@
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+        <ion-item nav-clear menu-close href="#/app/home">
+          Home
         </ion-item>
       </ion-list>
     </ion-content>
