--- a/app/highvol/www/templates/new-workout.html
+++ b/app/highvol/www/templates/new-workout.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Workout A">
     <ion-content>
         <ion-list>
-            <ion-item ng-repeat="playlist in worksets" href="#/app/playlists/{{playlist.id}}">{{playlist.title}}</ion-item>
+            <ion-item ng-repeat="playlist in worksets" href="#/app/workset/{{playlist.id}}">{{playlist.title}}</ion-item>
             <div class="item item-divider">Logs</div>
             <ion-item>Calories</ion-item>
             <ion-item>Weight</ion-item>
