Log and config page

--- a/app/highvol/www/templates/menu.html
+++ b/app/highvol/www/templates/menu.html
@@ -21,7 +21,7 @@
         <ion-item menu-close href="#/app/new-workout">
           New Workout
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
+        <ion-item nav-clear menu-close href="#/app/workout-config">
           Configure Workouts
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/logs">
