--- a/app/highvol/www/templates/logs.html
+++ b/app/highvol/www/templates/logs.html
@@ -1,26 +1,29 @@
+
 <ion-view view-title="Logs">
-  <ion-content>
-    <ion-list>
+    <ion-nav-buttons side="right">
+      <button class="button button-clear button-positive" ng-click="doSomething()">
+        By Date
+      </button>
+    </ion-nav-buttons>
+    <ion-content>
+        <ion-list>
 
-        <div class="item item-divider">Workouts</div>
-        <ion-item ng-repeat="logEntry in logs.workouts">
-        {{logEntry.date}} {{logEntry.sets}}
-
-            <p ng-repeat="workout in logEntry.workout">
-                {{workout.title}}
-                {{workout.sets}}
-            </p>    
+            <div class="item item-divider">Workouts</div>
+            <ion-item ng-repeat="logEntry in logs.workouts">
+                {{logEntry.date}} {{logEntry.sets}}
+                <p ng-repeat="workout in logEntry.workout">
+                    {{workout.title}} :
+                {{workout.sets.join(',')}}
+                </p>
+            </ion-item>
+            <div class="item item-divider">Weight</div>
+            <ion-item ng-repeat="logEntry in logs.measurements">{{logEntry.date}} {{logEntry.weight}}</ion-item>
+            <div class="item item-divider">Measuments</div>
+            <ion-item ng-repeat="logEntry in logs.measurements">{{logEntry.date}} {{logEntry.waistLine}}</p>
         </ion-item>
-        <div class="item item-divider">Measuments</div>
-        <ion-item ng-repeat="logEntry in logs.measurements">
-        {{logEntry.date}} {{logEntry.sets}}
-
-            <p> Calories: {{logEntry.calories}} </p>
-            <p> Weight: {{logEntry.weight}} </p>
-            <p> BMI: {{logEntry.bmi}} </p>
-
-            </p>    
-        </ion-item>
-    </ion-list>
+        <div class="item item-divider">BMI</div>
+        <ion-item ng-repeat="logEntry in logs.measurements">{{logEntry.date}}   {{logEntry.bmi}}</p>
+    </ion-item>
+</ion-list>
 
 </ion-view>
