--- a/app/highvol/www/templates/config-exercise.html
+++ b/app/highvol/www/templates/config-exercise.html
@@ -5,11 +5,11 @@
     <ion-list>
 
       <div class="item item-divider">Compound Exercises</div>
-      <ion-toggle ng-model="exercise.checked" ng-repeat-start="exercise in compoundExercises" toggle-class="toggle-calm">
+      <ion-toggle ng-model="exercise.active" ng-repeat-start="exercise in compoundExercises" toggle-class="toggle-calm">
         {{exercise.text}}
-        <p ng-show="exercise.checked">Target Sets <strong>{{exercise.targetSets}}</strong></p>
+        <p ng-show="exercise.active">Target Sets <strong>{{exercise.targetSets}}</strong></p>
       </ion-toggle>
-      <ion-item ng-repeat-end ng-show="exercise.checked">
+      <ion-item ng-repeat-end ng-show="exercise.active">
         <div class="range">
           1
           <input type="range" name="volume" min="3" max="20"  ng-model="exercise.targetSets">20</div>
