--- a/app/highvol/www/templates/config-workout.html
+++ b/app/highvol/www/templates/config-workout.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Configure Workouts">
-    <ion-nav-buttons side="right">
-        <!--     <button class="button button-clear button-positive" ng-click="doSomething()">Sort</button>
+<!--     <ion-nav-buttons side="right">
+ -->        <!--     <button class="button button-clear button-positive" ng-click="doSomething()">Sort</button>
     -->
-</ion-nav-buttons>
+<!-- </ion-nav-buttons> -->
 <ion-content>
 
     <ion-list>
