--- a/app/highvol/www/templates/menu.html
+++ b/app/highvol/www/templates/menu.html
@@ -21,8 +21,8 @@
         <ion-item menu-close href="#/app/new-workout">
           <i class="icon ion-star"></i> New Workout
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/config-workout">
-          <i class="icon ion-gear-b"></i> Configure Workouts
+        <ion-item nav-clear menu-close href="#/app/setup">
+          <i class="icon ion-gear-b"></i> Setup
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/logs">
           <i class="icon ion-connection-bars"></i>  Logs 
