--- a/app/highvol/www/templates/setup.html
+++ b/app/highvol/www/templates/setup.html
@@ -8,7 +8,7 @@
 <ion-content>
     <ion-list>
         <ion-item href="#/app/setup/exercises">Exercises</ion-item>
-        <ion-item href="#/app/setup">Workouts</ion-item>
+        <ion-item href="#/app/setup/workouts">Workouts</ion-item>
         <ion-item href="#/app/logs">Days</ion-item>
     </ion-list>
 </ion-content>
