Build fix, disabled tests

--- a/app/highvol/www/templates/setup.html
+++ b/app/highvol/www/templates/setup.html
@@ -7,9 +7,8 @@
 -->
 <ion-content>
     <ion-list>
-        <ion-item href="#/app/setup/exercises">Exercises</ion-item>
-        <ion-item href="#/app/setup/workouts">Workouts</ion-item>
-        <ion-item href="#/app/logs">Days</ion-item>
+        <ion-item href="#/app/setup/workoutprograms">Workouts Programs</ion-item>
+        <ion-item href="#/app/setup/workouts">Workout</ion-item>
     </ion-list>
 </ion-content>
 </ion-view>
